--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Flask Template<title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flask practice</title>
 </head>
 <body>
-<h1>Hello, flask template is ready for working 👍</h1>
-<p1> welcome {{name}}</p>
-	<form action="/submit" method="post">
-		<p>Name - </p>
-		<input type="text" placeholder="enter your full name">
-		<p>
-			Password - 
-		</p>
-		<input type="password" placeholder="enter password">
-	</form>
+  <h1>Hello, flask template is ready for working 👍</h1>
+  <p>Welcome {{ name }}</p>
+
+  <form action="/submit" method="POST">
+    <p>Name:</p>
+    <input type="text" name="name" placeholder="Enter your full name">
+
+    <p>Password:</p>
+    <input type="password" name="password" placeholder="Enter password">
+
+    <br><br>
+    <button type="submit">Submit</button>
+  </form>
 </body>
 </html>
-
